# ritb-rekordbox-reshaped

./: .gitignore  README.md  pyproject.toml  setup_gui.py
core/: config.py  rekordbox_reader.py
core/secrets/: config.json
sql/: schema.sql
